...
        }) => {
          const ErrorMsg = ({field}: ErrorMessageProps) => (
            <ErrorMessage errors={errors} touched={touched} field={field} />
          );

          return (
            <KeyboardAwareScrollView testID="VehicleScreen.ScrollView">
              <Text style={styles.heading} category="h5">
                Vehicle
              </Text>

              <View style={[styles.side, styles.inputWrapper]}>
                <View style={styles.halfColumn}>
                  <Input
                    testID="VehicleScreen.MakeInput"
                    value={values.make}
                    label="VEHICLE MAKE"
                    placeholder=""
                    onChangeText={handleChange('make')}
                    onBlur={handleBlur('make')}
                  />
                  <ErrorMsg field="make" />
                </View>
                <View style={styles.halfColumn}>
                  <Input
                    testID="VehicleScreen.ModelInput"
                    value={values.model}
                    label="VEHICLE MODEL"
                    placeholder=""
                    onChangeText={handleChange('model')}
                    onBlur={handleBlur('model')}
                  />
...
                    onBlur={handleBlur('year')}
                  />
                  <ErrorMsg field="year" />
                </View>
                <View style={styles.halfColumn}>
                  <Input
                    testID="VehicleScreen.LicensePlateInput"
                    value={values.licensePlate}
                    label="LICENSE PLATE"
                    placeholder=""
                    onChangeText={handleChange('licensePlate')}
                    onBlur={handleBlur('licensePlate')}
                  />
                  <ErrorMsg field="licensePlate" />
                </View>
              </View>

              <View style={styles.inputWrapper}>
                <Input
                  testID="VehicleScreen.VinInput"
                  value={values.vin}
                  label="VIN #"
                  placeholder=""
                  onChangeText={handleChange('vin')}
                  onBlur={handleBlur('vin')}
                />
...

              <View style={styles.inputWrapper}>
                <Text style={[styles.label]} category="label" appearance="hint">
                  INSURANCE
                </Text>
                <TouchableOpacity
                  testID="VehicleScreen.InsurancePhotoInput"
                  onPress={async () => {
                    try {
                      const {assets} = await requestPhoto();
                      if (assets && assets[0]) {
                        setFieldValue('insurancePhoto', assets[0].base64);
                        setInsurancePhotoFileName(assets[0].fileName ?? '');
...

              <View style={styles.inputWrapper}>
                <Text style={[styles.label]} category="label" appearance="hint">
                  REGISTRATION
                </Text>
                <TouchableOpacity
                  testID="VehicleScreen.RegistrationPhotoInput"
                  onPress={async () => {
                    try {
                      const {assets} = await requestPhoto();
                      if (assets && assets[0]) {
                        setFieldValue('registrationPhoto', assets[0].base64);
                        setRegistrationPhotoFileName(assets[0].fileName ?? '');
...
              <View style={[styles.side, styles.inputWrapper]}>
                <View style={styles.halfColumn}>
                  <Text style={styles.label} category="label" appearance="hint">
                    INSURANCE EXPIRATION
                  </Text>
                  <Datepicker
                    testID="VehicleScreen.InsuranceExpirationInput"
                    date={values.insuranceExpirationDate}
                    onSelect={value =>
                      setFieldValue('insuranceExpirationDate', value)
                    }
                    placeholder=" "
                    dateService={formatDateService}
...
                </View>
                <View style={styles.halfColumn}>
                  <Text style={styles.label} category="label" appearance="hint">
                    REGISTRATION EXPIRATION
                  </Text>
                  <Datepicker
                    testID="VehicleScreen.RegistrationExpirationInput"
                    date={values.registrationExpirationDate}
                    onSelect={value =>
                      setFieldValue('registrationExpirationDate', value)
                    }
                    placeholder=" "
                    dateService={formatDateService}
...
                </View>
              </View>

              <Button
                onPress={submitForm}
                style={styles.started}
                testID="VehicleScreen.SubmitButton">
                Next Step
              </Button>
            </KeyboardAwareScrollView>
          );
        }}
      </Formik>
...
