...
        ).unwrap();

        setLoading(false);
        if (!driver)
          throw new Error('Unknown error encountered while updating account');

        navigation.navigate('Payouts');
      } catch (error) {
        setLoading(false);
        if (typeof error === 'string') {
          Alert.alert('Submission Error', error);
        } else if (error instanceof Error) {
          Alert.alert('Submission Error', error.message);
...

              <View style={styles.inputWrapper}>
                <Input
                  value={values.licenseNumber}
                  label="DRIVER'S LICENSE #"
                  placeholder="##########"
                  testID="VerifyScreen.LicenseInput"
                  secureTextEntry={false}
                  onChangeText={handleChange('licenseNumber')}
                  onBlur={handleBlur('licenseNumber')}
                />
                <ErrorMsg field="licenseNumber" />
              </View>
...
              <View style={styles.inputWrapper}>
                <Text style={styles.label} category="label" appearance="hint">
                  DRIVER'S LICENSE PHOTO
                </Text>

                <TouchableOpacity
                  testID="VerifyScreen.LicensePhotoInput"
                  onPress={async () => {
                    setLoading(true);
                    try {
                      const {assets} = await requestPhoto();
                      if (assets && assets[0]) {
                        setFieldValue('licensePhoto', assets[0].base64);
...

              <View style={styles.inputWrapper}>
                <Text style={styles.label} category="label" appearance="hint">
                  DRIVER'S LICENSE EXPIRATION
                </Text>
                <Datepicker
                  testID="VerifyScreen.LicenseExpirationInput"
                  date={values.licenseExpirationDate}
                  onSelect={value =>
                    setFieldValue('licenseExpirationDate', value)
                  }
                  dateService={formatDateService}
                  max={new Date(2100, 1, 1)}
...
                />
                <ErrorMsg field="licenseExpirationDate" />
              </View>

              <View style={styles.inputWrapper}>
                <Input
                  testID="VerifyScreen.SsnInput"
                  value={values.ssn}
                  label="SOCIAL SECURITY NUMBER"
                  placeholder="###-##-####"
                  maxLength={11}
                  onChangeText={text => setFieldValue('ssn', formatValue(text))}
                  onBlur={handleBlur('ssn')}
...
              <View style={styles.inputWrapper}>
                <Text style={styles.label} category="label" appearance="hint">
                  PROFILE PHOTO
                </Text>

                <TouchableOpacity
                  testID="VerifyScreen.ProfilePhotoInput"
                  onPress={async () => {
                    setLoading(true);
                    try {
                      const {assets} = await requestPhoto();
                      if (assets && assets[0]) {
                        setFieldValue('profilePhoto', assets[0].base64, true);
...
                <ErrorMsg field="profilePhoto" />
              </View>
              <Button
                onPress={submitForm}
                style={styles.started}
                disabled={loading}
                testID="VerifyScreen.SubmitButton">
                <Text>
                  Next Step{'  '}
                  {loading ? <Spinner status="basic" size="tiny" /> : <></>}
                </Text>
              </Button>
            </KeyboardAwareScrollView>
...
