...
          const ErrorMsg = ({field}: ErrorMessageProps) => (
            <ErrorMessage errors={errors} touched={touched} field={field} />
          );
          return (
            <KeyboardAwareScrollView>
              <Text style={styles.heading} category="h5">
                Vehicle Photos
              </Text>

              <Text style={styles.text} category="p1">
                Make sure that your license plate is clearly visible in the Back
                (Exterior) photo.
              </Text>
...
              <View style={styles.row}>
                <View style={styles.half}>
                  <Text style={styles.label} category="label" appearance="hint">
                    FRONT (EXTERIOR)
                  </Text>
                  <TouchableOpacity
                    testID="VehiclePhotosScreen.FrontPhoto"
                    style={styles.photoWrapper}
                    onPress={async () => {
                      const asset = await handlePhoto(setFieldValue, 'front');
                      setAsset(asset, 'front');
                    }}>
                    {uris.front ? (
...
                <View style={styles.half}>
                  <Text style={styles.label} category="label" appearance="hint">
                    BACK (EXTERIOR)
                  </Text>

                  <TouchableOpacity
                    testID="VehiclePhotosScreen.BackPhoto"
                    style={styles.photoWrapper}
                    onPress={async () => {
                      const asset = await handlePhoto(setFieldValue, 'back');
                      setAsset(asset, 'back');
                    }}>
                    {uris.back ? (
...
              <View style={styles.row}>
                <View style={styles.half}>
                  <Text style={styles.label} category="label" appearance="hint">
                    DRIVER SIDE (EXTERIOR)
                  </Text>
                  <TouchableOpacity
                    testID="VehiclePhotosScreen.DriverSidePhoto"
                    style={styles.photoWrapper}
                    onPress={async () => {
                      const asset = await handlePhoto(
                        setFieldValue,
                        'drivers_side',
                      );
...
                <View style={styles.half}>
                  <Text style={styles.label} category="label" appearance="hint">
                    PASSENGER SIDE (EXTERIOR)
                  </Text>

                  <TouchableOpacity
                    testID="VehiclePhotosScreen.PassengerSidePhoto"
                    style={styles.photoWrapper}
                    onPress={async () => {
                      const asset = await handlePhoto(
                        setFieldValue,
                        'passengers_side',
                      );
...
              <View style={styles.row}>
                <View style={styles.half}>
                  <Text style={styles.label} category="label" appearance="hint">
                    CARGO AREA (INTERIOR)
                  </Text>
                  <TouchableOpacity
                    testID="VehiclePhotosScreen.CargoPhoto"
                    style={styles.photoWrapper}
                    onPress={async () => {
                      const asset = await handlePhoto(
                        setFieldValue,
                        'cargo_area',
                      );
...
                </View>
              </View>

              <Button
                onPress={submitForm}
                style={styles.started}
                testID="VehiclePhotosScreen.SubmitButton">
                Next Step
              </Button>
            </KeyboardAwareScrollView>
          );
        }}
      </Formik>
...
